fix(store): 不要なカラムを削除 (#1438)
* fix(store): 不要なカラムを削除

* fix(api): fix for lint

* fix(api): fix for lint

* fix(api): fix small

* fix(api): fix test code
