# docs/swagger/admin/components/schemas/entity/product.yaml
@@ -119,11 +119,6 @@ product:
     originCity:
       type: string
       description: 原産地(市区町村)
-    businessDays:
-      type: array
-      description: 営業曜日
-      items:
-        $ref: './../../../openapi.yaml#/components/schemas/weekday'
     startAt:
       type: integer
       format: int64
@@ -169,7 +164,6 @@ product:
   - box100Rate
   - originPrefecture
   - originCity
-  - businessDays
   - startAt
   - endAt
   - createdAt
@@ -215,7 +209,6 @@ product:
     box100Rate: 40
     originPrefecture: 'tokyo'
     originCity: '彦根市'
-    businessDays: [1,2,3,4,5]
     startAt: 1640962800
     endAt: 1640962800
     createdAt: 1640962800
